# Sculpture

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  tmp_birdinspace.yaml  tmp_birdinspace_nobg.yaml  tmp_playground.yaml
notebooks/: 01_explore.py  02_playground.ipynb
photos/: emergent4g.HEIC
photos/birdinspace_frames/: manifest.json
scripts/: apple_mask_frames.py  build_review_contacts.py  build_sculpture_catalog.py  extract_turntable_frames.py  show_bg_removed_frame.py  show_bg_removed_video_frames.py
src/sculpture/: __init__.py  calibration.py  catalog.py  cli.py  config.py  meshing.py  pipeline.py  playground.py  preprocessing.py  reconstruction.py  thumbnail.py  wireframe.py
src/sculpture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sculpture/io/: image_io.py
src/sculpture/utils/: __init__.py  logging.py
tests/: conftest.py  test_catalog.py  test_config.py  test_extract_turntable_frames.py  test_image_io.py  test_preprocessing.py  test_wireframe.py
tools/mask_subject/: main.swift  mask_subject
